--- a/CSS Crash Course/csscheatsheet/index.html
+++ b/CSS Crash Course/csscheatsheet/index.html
@@ -15,6 +15,7 @@
             <div class = "box-2">
                 <h1>Goodbye World</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, quasi? Sequi minus magni harum? Ullam quod consectetur consequuntur, aspernatur sint fuga tenetur non corporis laboriosam numquam repudiandae! Sapiente, earum corrupti.</p>
+                <a class="button" href="">Read More</a>
             </div>
 
             <div class="categories"> 
