sidebar and mainblock 57:51

--- a/CSS Crash Course/csscheatsheet/index.html
+++ b/CSS Crash Course/csscheatsheet/index.html
@@ -53,6 +53,24 @@
 
             </form>
 
+            <div class="block">
+                <h3>Heading</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum ipsa id nemo dolor! Officiis necessitatibus magnam deserunt dicta tempore nihil officia est earum sequi. Voluptatum ullam mollitia labore maxime quae.</p>
+
+            </div>
+
+            <div class="block">
+                <h3>Heading</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum ipsa id nemo dolor! Officiis necessitatibus magnam deserunt dicta tempore nihil officia est earum sequi. Voluptatum ullam mollitia labore maxime quae.</p>
+                
+            </div>
+
+            <div class="block">
+                <h3>Heading</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum ipsa id nemo dolor! Officiis necessitatibus magnam deserunt dicta tempore nihil officia est earum sequi. Voluptatum ullam mollitia labore maxime quae.</p>
+                
+            </div>
+
 
         </div> <!--container ends here-->
 
