--- a/CSS Crash Course/csscheatsheet/index.html
+++ b/CSS Crash Course/csscheatsheet/index.html
@@ -71,6 +71,18 @@
                 
             </div>
 
+            <!--need to clear the hover above so that formating doesn't get messed up-->
+            <div class="clr"></div>
+
+            <div id="main-block"> 
+                <h3>Heading</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum ipsa id nemo dolor! Officiis necessitatibus magnam deserunt dicta tempore nihil officia est earum sequi. Voluptatum ullam mollitia labore maxime quae.</p>
+            </div>
+           
+            <div id="sidebar">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum ipsa id nemo dolor! Officiis necessitatibus magnam deserunt dicta tempore nihil officia est earum sequi. Voluptatum ullam mollitia labore maxime quae.</p>
+            </div>
+
 
         </div> <!--container ends here-->
 
