with position absolute error

--- a/CSS Crash Course/csscheatsheet/index.html
+++ b/CSS Crash Course/csscheatsheet/index.html
@@ -83,6 +83,15 @@
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum ipsa id nemo dolor! Officiis necessitatibus magnam deserunt dicta tempore nihil officia est earum sequi. Voluptatum ullam mollitia labore maxime quae.</p>
             </div>
 
+            <!--Since we made the sidebar float we need to clear it-->
+            <div class="clr"></div>
+
+            <!--positioning box example-->
+            <div class="p-box">
+                <h1>Hello</h1>
+                <h2>Goodbye</h2>
+            </div>
+           
 
         </div> <!--container ends here-->
 
