--- a/CSS Crash Course/csscheatsheet/index.html
+++ b/CSS Crash Course/csscheatsheet/index.html
@@ -91,6 +91,21 @@
                 <h1>Hello</h1>
                 <h2>Goodbye</h2>
             </div>
+
+            <ul class="my-list">
+                <li>List item</li>
+                <li>List item</li>
+                <li>List item</li>
+                <li>List item</li>
+                <li>List item</li>
+                <li>List item</li>
+                <li>List item</li>
+                <li>List item</li>
+                <li>List item</li>
+                <li>List item</li>
+
+
+            </ul>
            
 
         </div> <!--container ends here-->
