finished home page

--- a/Acme HTML Responsive/index.html
+++ b/Acme HTML Responsive/index.html
@@ -60,7 +60,7 @@
                 </div>
 
                 <div class ="box"> 
-                    <img src="./images/css_logo.png">
+                    <img src="./images/css3_logo.png">
                     <h3>CSS3 Styling</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus sit dignissimos sed, facere animi at reprehenderit perspiciatis recusandae, eligendi voluptates, suscipit libero ipsa nesciunt quas qui vero nihil quaerat similique.</p>
                 </div>
