normal site = finished, + added extra feature to make font in textarea the same:. 54.26

--- a/Acme HTML Responsive/services.html
+++ b/Acme HTML Responsive/services.html
@@ -46,11 +46,10 @@
         </section>
 
         <section id="main"> 
-
             <div class="container"> 
                 <article id="main-col">
                     <h1 class="page-title">Services</h1>
-                    <ul id-"services">
+                    <ul id="services">
                         <li>
                             <h3>Website Design</h3>
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia quaerat recusandae repudiandae perspiciatis minima sint architecto in autem velit fugit hic neque asperiores optio, necessitatibus explicabo. Mollitia hic repellendus ab.</p>
