--- a/Practice/flexbox.html
+++ b/Practice/flexbox.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flex Box</title>
     <style> 
-    @media(min-width 400px){
+    @media(min-width: 768px){
         .container-1{
             display: flex; 
             align-items: stretch; 
@@ -31,10 +31,9 @@
         flex-wrap: wrap; 
     }
 
-    .container-1 div, .container-2 div{
+    .container-1 div, .container-2 div, .container-3 div{
         border: 1px solid #ccc;
         padding: 10px;
-
     }
     
     .box-1{
@@ -57,7 +56,7 @@
     .container-box2{
         width: 20%; 
         flex-basis: 20%;
-        align-items: center;
+        /* align-items: center; */
     }
 
     .container-box3{
@@ -69,9 +68,6 @@
  @media(min-width: 768px){
 
         }
-
-
-
     -->
        
 </head>
