--- a/Grid CSS Responsive Mobile Website/index.html
+++ b/Grid CSS Responsive Mobile Website/index.html
@@ -12,11 +12,13 @@
     <!--Header Showcase-->
     <header id="showcase" class="grid">
         <div class="bg-image"></div>
-        <h1>Welcome to Acme Web Solutions</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo aspernatur ullam tempore possimus in a vitae doloremque non corporis omnis.
-    
-        </p>
-        <a href="#section-b" class="btn">Read More</a>
+            <div class="content-wrap">
+                <h1>Welcome to Acme Web Solutions</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo aspernatur ullam tempore possimus in a vitae doloremque non corporis omnis.
+                </p>
+            </div>
+            <a href="#section-b" class="btn">Read More</a>
+      
     </header>
 
     <!--Main Area -->
@@ -24,10 +26,11 @@
         <!--Section A-->
         <section id="section-a" class="grid">
             <div class="content-wrap">
-                <h2 class="content-title">Web & Application Development</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint et quas excepturi laboriosam rem porro esse qui quae corrupti doloremque nostrum perspiciatis at error ullam repellat exercitationem ab aliquid quasi numquam dolorum nihil laborum magnam, reiciendis optio? Nam, esse! Corrupti?</p>
+            <h2 class="content-title">Web & Application Development</h2>
+                <div class="content-text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint et quas excepturi laboriosam rem porro esse qui quae corrupti doloremque nostrum perspiciatis at error ullam repellat exercitationem ab aliquid quasi numquam dolorum nihil laborum magnam, reiciendis optio? Nam, esse! Corrupti?</p>
+                </div>
             </div>
-
         </section>
 
 
