still need to figure out how to fix sidebar media query

--- a/Flex box Acme/about.html
+++ b/Flex box Acme/about.html
@@ -55,12 +55,12 @@
                 </article>
 
                 
-                    <aside id="sidebar">
+                    <div class="sidebar">
                         <div class="dark"> 
                         <h3>What We Do</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum, at facilis rerum quasi voluptate magni labore officiis accusamus, ea quas quis accusantium adipisci cupiditate tempore aut molestias commodi esse placeat.</p>
                     </div>
-                    </aside>
+                    </div>
                
 
             </div>
