--- a/Flex box Acme/services.html
+++ b/Flex box Acme/services.html
@@ -71,7 +71,7 @@
                 </article>
 
                 
-                    <aside id="sidebar">
+                    <div class="sidebar">
                         <div class="dark"> 
                         <h3>Get a quote</h3>
                         <form class="quote"> 
@@ -95,7 +95,7 @@
                         </form>
 
                     </div>
-                    </aside>
+                </div>
                
 
             </div>
