attempt for black nav bar

--- a/Zara Website 2/index.html
+++ b/Zara Website 2/index.html
@@ -32,8 +32,8 @@
                 <li>
                     <div class="search-container">
                           <input type="text" placeholder="Search.." name="search">
-                          <button type="submit"><i class="fa fa-search"></i></button>
-                        </form>
+                          <!-- <button type="submit"><img src ="https://www.kindpng.com/picc/m/434-4340022_free-baidu-icon-png-transparent-background-search-icon.png"></button>
+                        </form> -->
                       </div>
                 </li>
             </ul>
