--- a/Zara Website 1/index.html
+++ b/Zara Website 1/index.html
@@ -28,7 +28,7 @@
             </div>
             <ul class=nav>
                 <li><a href="#">Men</a></li>
-                <li><a href="#">Women</a></li>
+                <li><a href="women.html">Women</a></li>
                 <li><a href="#">Kids</a></li>
                 <li><a href="#">Sale</a></li>
             
