--- a/Zara Website 1/landingpage.html
+++ b/Zara Website 1/landingpage.html
@@ -12,8 +12,8 @@
 <body>
     <section class="showcase active">
     <header>
-        <h2 class="logo">
-          <img src="Images/MicrosoftTeams-image (1).png">
+        <h2 class="logo"><a href="index.html" target="_blank"> 
+          <img src="Images/MicrosoftTeams-image (1).png">    </a>
         </h2>
         <div class="nav">
           <ul>
@@ -35,7 +35,7 @@
         <h2>It's Here</h2>
         <h3>Spring Collection</h3>
         <p>It's never looked better – with the most flattering cuts, the latest colours and highest quality fabrics.</p>
-        <a href="#">Explore</a>
+        <a href="women.html">Explore</a>
 
     </div>
     <ul class="social">
@@ -49,7 +49,7 @@
     
     <div class="menu">
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">News</a></li>
             <li><a href="#">Destination</a></li>
             <li><a href="#">Blog</a></li>
