--- a/Zara Website 1/index.html
+++ b/Zara Website 1/index.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-
+<!--onmouseover-->
     
     <title>Zara Website</title>
 
@@ -225,6 +225,12 @@
     }
 
     })
+    // menuToggle.addEventListener('mouseout', () => {
+    //     menu.style.display = "none";
+    //     menuIsOpen = false;
+
+    // })
+  
         
     </script>
 </body>
