2/09/21 added contact page

--- a/Zara Website 1/index.html
+++ b/Zara Website 1/index.html
@@ -30,13 +30,13 @@
 
             </div>
             <ul class=nav>
-                <li><a href="#">Men</a></li>
+                <li><a href="#">Home</a></li>
                 <li><a href="women.html"target="_blank">Women</a></li>
                 <li><a href="#">Kids</a></li>
                 <li><a href="#">Sale</a></li>
             
             </ul>
-            <div class="toggle"></div>
+            <!-- <div class="toggle"></div> -->
         </div>
       
     </nav>
