--- a/Javascript Examples/jsExamples.html
+++ b/Javascript Examples/jsExamples.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascirpt Examples Day One</title>
-    <script src="jsDayOne.js"></script>
+    <script src="js/jsDayOne.js"></script>
 </head>
 <body>
     
