--- a/Zara Website 1/Contact.html
+++ b/Zara Website 1/Contact.html
@@ -59,10 +59,11 @@
 
         <div id="form-container" class="grid">
            <form>
+            <h1>Message</h1>
               <label for="fname">Name</label>
               <input type="text" id="name" name="name" placeholder="First Name">
-          
-              <label for="lname">Last Name</label>
+<!--           
+              <label for="lname">Last Name</label> -->
               <input type="text" id="lname" name="lastname" placeholder="Last Name">
           
               <label for="topic">Choose a topic</label>
