--- a/Zara Website 1/landingpage.html
+++ b/Zara Website 1/landingpage.html
@@ -39,21 +39,24 @@
 
     </div>
     <ul class="social">
-        <li><a href="#"><img src="https://i.ibb.co/x7P24fL/facebook.png"></a></li>
-        <li><a href="#"><img src="https://i.ibb.co/Wnxq2Nq/twitter.png"></a></li>
-        <li><a href="#"><img src="https://i.ibb.co/ySwtH4B/instagram.png"></a></li>
+        	<!--facebook-->
+				<li><a href="https://www.facebook.com/Zara/"><img src="https://i.ibb.co/x7P24fL/facebook.png"></a></li>
+				<!--twitter-->
+				<li><a href="https://twitter.com/ZARA?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img src="https://i.ibb.co/Wnxq2Nq/twitter.png"></a></li>
+				<!--instagram-->
+				<li><a href="https://www.instagram.com/zara/"><img src="https://i.ibb.co/ySwtH4B/instagram.png"></a></li>
       </ul>
     </ul>
     </section>
+    
 
     
     <div class="menu">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">News</a></li>
-            <li><a href="#">Destination</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="women.html">Womens</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="Cont">Contact</a></li>
           </ul>
     </div>
 
