added in beauty page, converted landing page to beauty page, added in pictures for beauty

--- a/Zara Website 1/index.html
+++ b/Zara Website 1/index.html
@@ -29,7 +29,7 @@
 		</a>
 		
 		<a href="Contact.html">Contact</a>
-		<a href=".openbtn">About</a>
+		<a href="landingpage.html">Beauty</a>
 		<a href="women.html">Womens</a>
 		<a><button class="openBtn" onclick="openSearch()">Search</button></li></a>
 		<a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>	
