--- a/Zara Website 1/index.html
+++ b/Zara Website 1/index.html
@@ -20,7 +20,7 @@
 	<nav class="topnav" id="myTopnav">
 		<a href="index.html" class="active">
 				<div class="logo">
-				
+					<img src="https://www.freepnglogos.com/uploads/zara-brand/clothing-brand-zara-hd-zara-logo-2020-3.jpg">
 				</div>
 		</a>
 		<a href="index.html" class="active">Home</a>
