finished commenting css

--- a/Zara Website 1/index.html
+++ b/Zara Website 1/index.html
@@ -54,7 +54,7 @@
 				<h1>Spring Collection</h1>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo aspernatur ullam tempore possimus in a vitae doloremque non corporis omnis.
 				</p> 
-			<a href="#section-b" class="btn">Shop Now</a>
+			<a href="women.html" class="btn">Shop Now</a>
 		</div>
 	</header>
 
@@ -62,7 +62,7 @@
 	<main id="main"> 
 
 	<!--Photo of Men and Women-->
-		<section id="section-d" class="grid">
+		<section id="two-col" class="grid">
 			<div class="box" id="girl">
 				<img src="images/girl.jpg" alt="">
 				<div class="centered"><a href="#"><h1>Shop New Arrivals</h1></a></div>
