--- a/Zara Website 1/women.html
+++ b/Zara Website 1/women.html
@@ -56,7 +56,7 @@
     <main id="main-content">
     
         <!--Section C-->
-        <section id="section-c" class="grid">
+        <section id="text-header" class="grid">
             <div class="content-wide">
                 <h2 class="content-title">WOMEN'S TOPS</h2>
                 <p>Our women’s tops cater to all occasions, tastes, styles and silhouettes to ensure there is something for every wardrobe.
@@ -64,8 +64,9 @@
             </div>
         </section>
 
-        <!--Section B-->
-        <section id="section-j" class="grid">
+        <!--Section J
+        -->
+        <section id="photogrid" class="grid">
             <!--Row 1-->
             <ul> 
                 <li>
