--- a/Zara Website 1/index.html
+++ b/Zara Website 1/index.html
@@ -18,7 +18,7 @@
 	
 	<!--Navigation Bar-->
 	<nav class="topnav" id="myTopnav">
-		<a href="index.html" class="active">
+		<a href="index.html">
 				<div class="logo">
 					<img src="https://www.freepnglogos.com/uploads/zara-brand/clothing-brand-zara-hd-zara-logo-2020-3.jpg">
 				</div>
@@ -62,19 +62,18 @@
 	<main id="main"> 
 
 	<!--Photo of Men and Women-->
-		<section id="two-col" class="grid">
-			<div class="box" id="girl">
-				<img src="images/girl.jpg" alt="">
-				<div class="centered"><a href="#"><h1>Shop New Arrivals</h1></a></div>
-			</div>
+	<section id="two-col" class="grid">
+		<div class="box" id="girl">
+			<img src="images/girl.jpg" alt="">
+			<div class="centered"><h1>Shop New Arrivals</h1></div>
+		</div>
 
-			<div class="box">
-				<img src="images/guy.jpg" alt="">
-				<div class="centered"><a href="#"><h1>Best of Sale</h1></a></div>
-			
-			</div>
-		</section>
-	</main>
+		<div class="box">
+			<img src="images/guy.jpg" alt=""></a>
+			<div class="centered"><h1>Best of Sale</h1></div>
+		</div>
+	</section>
+</main>
 	
 
 	<!--Footer-->
