--- a/Zara Website 1/landingpage.html
+++ b/Zara Website 1/landingpage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--Link to CSS-->
-    <link rel="stylesheet" href="css/style1.css">  
+    <link rel="stylesheet" href="css/beauty.css">  
 
     <!--Import Lora font for subheading-->
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:300" rel="stylesheet">
