--- a/Manipulating the DOM/window-resize-example.html
+++ b/Manipulating the DOM/window-resize-example.html
@@ -27,6 +27,21 @@
    </div>
 
    <script>
+    // const div = document.querySelector('div'); 
+    // const minWidth=window.innerWidth; 
+    // const minHeight = window.innerHeight; 
+
+    // div.style.width = minWidth + 'px'; 
+    // div.style.height = minHeight + 'px'; 
+
+    window.onresize = function(){
+        winWidth = window.innerWidth;
+        winHeight = window.innerHeight;
+         div.style.width = minWidth + 'px'; 
+        div.style.height = minHeight + 'px'; 
+
+    }
+
 
    </script>
 </body>
