--- a/Manipulating the DOM/shopping-list.html
+++ b/Manipulating the DOM/shopping-list.html
@@ -33,10 +33,8 @@
    </ul>
 
    <script>
-       let items = 0;
      function addItem(){
          
-         items++;
          const item = document.getElementById("item").value;
         const list = document.querySelector('ul');
 
@@ -45,7 +43,11 @@
          let span = document.createElement('span');
          let button = document.createElement('button');
 
-         button.onclick = function(){listItem.remove();};
+         button.onclick = function(){
+            listItem.remove();
+         };
+
+         
         span.innerHTML = item;
          button.innerHTML = "Delete";
          listItem.append(span);
