completed code before arrow functions

--- a/Manipulating the DOM/SHOPPING-LIST1.HTML
+++ b/Manipulating the DOM/SHOPPING-LIST1.HTML
@@ -25,8 +25,9 @@
    <div>
       <label for="item">Enter a new item:</label>
       <input type="text" name="item" id="item">
-      <button onclick="addItem()">Add item</button>
-      <!--button onlcick ="addItem();" Add item</button>-->
+      <button id="addItem">Add item</button>
+
+      <!--<button onclick="addItem();">Add item</button>-->
    </div>
 
    <ul>
@@ -34,39 +35,41 @@
    </ul>
 
    <script>
-       const input =document.querySelector('#item'); 
-       const btn = document.querySelector('#additem'); 
-       const itemList = document.querySelector('ul');
+      const input = document.querySelector('#item');
+      const btn = document.querySelector('#addItem');
+      const itemList = document.querySelector('ul');
 
-       //another way to do it 
+      const addItem = function addItem() {
+         const itemText = input.value;
+         if (itemText !== undefined && itemText !== '') {
+            const li = document.createElement('li');
+            li.textContent = itemText;
+            itemList.appendChild(li);
 
-    //    btn.onclick =  function addItem(){
-    //     console.log('Adding item...'); 
-    //  }
+            const delButton = document.createElement('button');
+            delButton.textContent = 'DELETE';
 
-     function addItem(){
-        // console.log('Adding item...'); 
-
-        // we need to get vlaue of whatever is in the input element
-        const itemText = input.value; 
-        const li = document.createElement('li');
-        li.textContent = itemText; 
-
-        itemList.appendChild(li); 
-
-        input.value = ""; 
-
-        
-     }
-
-     /*We are passing in  callback function - when we click, we call the function that was passed in*/
-
-     btn.addEventListener('click', addItems); 
-
-    
+            delButton.addEventListener('click', function () {
+               delButton.parentElement.remove();
+            });
+            li.appendChild(delButton);
 
 
+            input.value = '';
+            item.focus();
+         }
+      }
 
+      /* we are passing in a callback function  - when we click we call the function that was passed in */
+
+      btn.addEventListener('click', addItem);
+      /*
+         btn.onclick = function addItem() {
+            console.log('Adding Item...');
+         }
+      */
+
+      input.focus();
    </script>
 </body>
 
