--- a/Sports League/standings.html
+++ b/Sports League/standings.html
@@ -61,22 +61,23 @@
       </nav>
 
       <button id="clickme">Click me</button>
-      <input type = "search" name="search" id="search"> 
-      <div id="table">
-         <table id="datatable">
-            <thead>
-               <tr>
-                  <th id ="name">Name</th>
-                  <th id = "category">Category</th>
-                  <th>Start</th>
-                  <th>End</th>
-               </tr>
-            </thead>
-            <tbody></tbody>
-         </table>
-      </div>
+   <input type="text" name="search" id="search">
+   <div id="table">
+      <table id="datatable">
+         <thead>
+            <tr>
+               <th id="name">Name</th>
+               <th id="category">Category</th>
+               <th id="start">Start</th>
+               <th id="end">End</th>
+            </tr>
+         </thead>
+         <tbody></tbody>
+      </table>
+   </div>
+
    
-      <script src="js/standing.js"></script>
+      <script src="JavaScript/standing.js"></script>
 
 
      
