--- a/Sports League/standings.html
+++ b/Sports League/standings.html
@@ -59,7 +59,7 @@
 
 
 
-   <input type="text" name="search" id="search">
+   <!-- <input type="text" name="search" id="search">
    <div id="table">
       <table id="datatable">
          <thead>
@@ -72,7 +72,20 @@
          </thead>
          <tbody></tbody>
       </table>
-   </div>
+   </div> -->
+   <div class="container mt-4">
+        <table class="table table-striped mt-5">
+          <thead>
+            <tr>
+              <th>Title</th>
+              <th>Author</th>
+              <th>ISBN#</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody id="book-list"></tbody>
+        </table>
+    </div>
 
    
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
