--- a/Sports League/example.html
+++ b/Sports League/example.html
@@ -38,7 +38,7 @@
       </table>
    </div>
 
-   <script src="JavaScript/example.js"></script>
+   <script src="js/example.js"></script>
 </body>
 
 </html>
