--- a/Sports League/scores.html
+++ b/Sports League/scores.html
@@ -11,6 +11,7 @@
 
 </head>
 <body>
+  
     <!---Nav-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
@@ -41,6 +42,26 @@
           </div>
         </div>
       </nav>
+
+
+      <!--form-->
+
+      <div class="container mt-4">
+        <table class="table table-striped mt-5">
+          <thead>
+            <tr>
+              <th id="homeTeamCol">Home Team</th>
+              <th id="awayTeamCol">Away Team</th>
+              <th id="homeTeamScoreCol">Home Team Score</th>
+              <th id="awayTeamScoreCol">Away Team Score</th>
+            </tr>
+          </thead>
+          <tbody id="game-list"></tbody>
+        </table>
+    </div>
+
+
+
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
       <script src="https://kit.fontawesome.com/9f40a475d1.js" crossorigin="anonymous"></script>
