--- a/Sports League/standings.html
+++ b/Sports League/standings.html
@@ -7,19 +7,8 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="bootstrap.css">
-    <style>
-      table {
-         border-collapse: collapse;
-      }
-
-      td,
-      th {
-         border: 1px solid #999;
-         padding: 0.5rem;
-         text-align: left;
-      }
-   </style>
+    <!-- <link rel="stylesheet" href="bootstrap.css"> -->
+    
     
 
     <title>Home Page</title>
@@ -73,14 +62,23 @@
          <tbody></tbody>
       </table>
    </div> -->
-   <div class="container mt-4">
-        <table class="table table-striped mt-5">
+   <div class="container mt-4 mx-1">
+        <table class="table table-bordered">
           <thead>
             <tr>
-              <th>Title</th>
-              <th>Author</th>
-              <th>ISBN#</th>
-              <th></th>
+              <th>Win</th>
+              <th>Loss</th>
+              <th>Win Percentage</th>
+              <th>Games Back</th>
+              <th>Home Record</th>
+              <th>Away Record</th>
+              <th>Division Record</th>
+              <th>Conference Record</th>
+              <th>Points Per Game</th>
+              <th>Opponent Points Per Game</th>
+              <th>Average Point Differential</th>
+              <th>Current Win Streak</th>
+              <th>Record Last 10 Games</th>
             </tr>
           </thead>
           <tbody id="book-list"></tbody>
