moved pagination to the bottom

--- a/New Sports Standings/enterScore.html
+++ b/New Sports Standings/enterScore.html
@@ -117,7 +117,7 @@
                  <option value="DEN">Denver Nuggets</option>
                  <option value="POR">Portland Trail Blazers</option>
                  <option value="MIN">Minnesota Timberwolves</option>
-                 <option value="OKC">Oklahoma Thunder</option>
+                 <option value="OKC">Oklahoma City Thunder</option>
                  <option value="PHO">Phoenix Suns</option>
                  <option value="LAC">Los Angeles Clippers</option>
                  <option value="LAL">Los Angeles Lakers</option>
