before getting rid of await

--- a/New Sports Standings/enterScore.html
+++ b/New Sports Standings/enterScore.html
@@ -27,7 +27,7 @@
                 <a class="nav-link" href="standings.html">Standings</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="scores.html">Scores</a>
+                <a class="nav-link active" href="games.html">Games</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="enterScore.html">Enter a Score<span class="visually-hidden">(current)</span></a>
